# arc380_s26_group2

./: .gitignore
docker/: Dockerfile  cyclonedds.xml  docker-compose.yml
scripts/: udp_relay.py
scripts/examples/: angle_convert.py  egm_example.py  get_image.py  motion_planning_helper.py
src/abb_egm_controller/: package.xml  setup.cfg  setup.py
src/abb_egm_controller/abb_egm_controller/: buffer.py  egm_config.py  egm_controller.py  egm_pb2.py  msg_conversion.py
src/abb_egm_controller/launch/: egm_controller.launch.py
src/abb_egm_interfaces/: CMakeLists.txt  package.xml
src/abb_egm_interfaces/action/: ExecuteTrajectory.action
src/abb_egm_interfaces/msg/: EgmRobot.msg  EgmSensor.msg  RobotJointState.msg  RobotPoseState.msg
src/abb_egm_interfaces/srv/: SetControlMode.srv
src/abb_irb120_description/urdf/: gripper_macro.xacro
src/abb_irb120_gazebo/: package.xml  setup.py
src/abb_irb120_gazebo/abb_irb120_gazebo/: simulation_reset_node.py
src/abb_irb120_gazebo/launch/: gz_moveit.launch.py
src/abb_irb120_moveit/: .setup_assistant  package.xml  setup.cfg  setup.py
src/abb_irb120_moveit/config/: abb_irb120_3_60.ros2_control.xacro  abb_irb120_3_60.srdf  abb_irb120_3_60.urdf.xacro  initial_positions.yaml  joint_limits.yaml  ros2_controllers.yaml
src/abb_irb120_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  (+3 more)
workshops/Session14/: motion_planning_solution.py
workshops/Session16/: egm_controller_test.py
workshops/Session18/: ARC380_Session18_2DPerception.ipynb
